# performanceawareprogramming

./: .gitignore  CMakeLists.txt  README.md
src/: common.cpp  common.h  dummy.cpp
src/ipc/: sum.cpp  sum.s  sum_nobench.cpp  sumnobench_compiler_optimized.s  sumnobench_not_optimized.s
